--- a/app/assets/stylesheets/partials/_tabs.scss
+++ b/app/assets/stylesheets/partials/_tabs.scss
@@ -15,8 +15,8 @@
 
 ul.tabnav-tabs {
   display: inline-block;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   outline: none;
   li {
     display: inline-block;
